Revision history for IPC::SRLock

0.7.185 - 2012-03-29
        - Updated inc::Bob to 1.2
        - Upped min Perl ver to 5.10

0.6.181 - 2012-03-28
        - Stopped Bingos from testing see 603281a2-78ac-11e1-9d6f-f6dbfa7543f5

0.6.179 - 2012-03-24
        - Re-added Moose as a dependency as it contains Class::MOP

0.6.178 - 2012-03-24
        - Enhanced error messages
        - Updated Moose / Class::MOP / MRO::Compat dependencies

0.6.176 - 2012-02-24
        - Stopped Horne from testing see db033f8e-5e4e-11e1-952b-9fe4e7658155
        - Updated inc::Bob

0.6.174 - 2011-04-12
        - Suppressed dcollins CPAN testing
        - Moved boilerplate M::B subclass code to inc/Bob.pm

0.6.165 - 2011-02-22
        - Suppressed Konig CPAN testing again

0.6.164 - 2010-12-18
        - Suppressed Konig CPAN testing
        - Switched to Storable::nfreeze to be like Ovid
        - Added subroutine names to stack trace
        - Updated exception handling class
        - Fixed error handling in Sysv subclass

0.5.154 - 2010-09-28
        - Removed execute permission from Build.PL

0.5.150 - 2010-09-22
        - Switch to using M::B for install
        - Now uses Try::Tiny

0.4.147 - 2010-09-22
        - Stringify key so we can pass io objects *
        - Now uses TryCatch
        - Updated ensure_class_loaded

0.3.137 27/06/2006
        - Fixed key used to sign distro
        - Use Class::MOP in ensure_class_loaded

0.3.125 13/06/2009
        - Added more tests

0.2.118 06/06/2009
        - Updated exception class
        - Replaced mnemonics in errors

0.2.114 05/06/2009
        - Changed exception class API
        - Improved testing idioms
        - Upated POD Coverage Kwalitee tests

0.2.103 05/04/2009
        - More crap for CPAN testing

0.2.100 28/02/2009
        - Removed table_data method

0.2.99  12/02/2009
        - Dropped the singleton pattern from the construtor

0.2.92  26/01/2009
        - No longer depends on Readonly