@@ -1,5 +1,7 @@
 Revision history for IPC::SRLock
 
+        - Updated inc::CPANTesting
+
 0.7.185 - 2012-03-29
         - Updated inc::Bob to 1.2
         - Upped min Perl ver to 5.10
